@@ -1723,7 +1723,7 @@ class NTriangulation : public NPacket, public NFilePropertyReader {
          */
 
         /**
-         * \name Subdivisions and Covers
+         * \name Subdivisions, Extensions and Covers
          */
         /*@{*/
 
@@ -1738,8 +1738,10 @@ class NTriangulation : public NPacket, public NFilePropertyReader {
         /**
          * Converts an ideal triangulation into a finite triangulation.
          * All ideal or non-standard vertices are truncated and thus
-         * converted into
-         * real boundary components made from unglued faces of tetrahedra.
+         * converted into real boundary components made from unglued
+         * faces of tetrahedra.
+         *
+         * Note that this operation is a loose converse of cuspBoundary().
          *
          * \warning Currently, this routine subdivides all tetrahedra as
          * if <i>all</i> vertices (not just some) were ideal.
@@ -1764,6 +1766,30 @@ class NTriangulation : public NPacket, public NFilePropertyReader {
          * @author David Letscher
          */
         bool idealToFinite(bool forceDivision = false);
+
+        /**
+         * Converts each real boundary component into a cusp (i.e., an ideal
+         * vertex).  Only boundary components formed from real
+         * tetrahedron faces will be affected; ideal boundary components
+         * are already cusps and so will not be changed.
+         *
+         * This operation is performed by attaching a new tetrahedron to
+         * each boundary face and then gluing these new tetrahedra
+         * together in a way that mirrors the adjacencies of the
+         * underlying boundary faces.  Each boundary component will
+         * thereby be pushed up through the new tetrahedra and converted
+         * into a cusp formed using vertices of these new tetrahedra.
+         *
+         * Note that this operation is a loose converse of idealToFinite().
+         *
+         * \warning If a real boundary component contains vertices whose
+         * links are not discs, this operation may have unexpected results.
+         *
+         * @return \c true if changes were made, or \c false if the
+         * original triangulation contained no real boundary components.
+         */
+        bool cuspBoundary();
+
         /**
          * Does a barycentric subdivision of the triangulation.
          * Each tetrahedron is divided into 24 tetrahedra by placing
